--- a/style.css
+++ b/style.css
@@ -1,28 +1,25 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+#slide {
+    width: 1140px;
+    height: 400px;
+    margin: 0 auto;
+    position: relative;
 }
-body {
-    background-image: url(https://th.bing.com/th/id/R.3d53a122167671f14955623753d586e8?rik=mHNc3MppvzbHmQ&pid=ImgRaw&r=0);
-    background-repeat: no-repeat;
-    height: 1360px;
-    width: 1190px;
+#slide #hinh {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
-.main {
-    padding: 20px;
-}
-.buoi1 {
-    padding: 10px;
-    display: flex;
-    gap: 30px;
+#slide .fa-chevron-circle-left {
+    position: absolute;
+    top: 45%;
+    left: 20px;
     font-size: 30px;
+    color: burlywood;
 }
-.buoi1 li {
-    list-style-type: none;
-}
-.buoi1 li a {
-    color: white;
-    text-decoration: none;
+#slide .fa-chevron-circle-right {
+    position: absolute;
+    top: 45%;
+    right: 20px;
+    font-size: 30px;
+    color: burlywood;
 }
